# parts2sales-llm-hub

./: .dockerignore  .gitignore  .releaserc  Dockerfile  README.md  built_structure.ps1  built_structure_workflow.ps1  deploy_docker.ps1  docker_guide_gpt-pipeline-hub.md  generate_prompt_improvement.py  init_rye.ps1  package-lock.json  print_structure.ps1  print_structure_ascii.ps1  project_structure.txt  prompt_validation_optimization.py  prompt_validation_workflow_live.py  pyproject.toml  pytest.ini  requirements.txt  setup_env.ps1
.github/workflows/: ci.yaml  evaluate-pipeline.yaml
docs/: detailed_prompt_eval_level1_de.md  detailed_prompt_eval_level1_en.md  iterative_prompt_validation_process_detailed.md  iterativer_prompt_validierungsprozess_detailliert.md  template_workflow_de.md  template_workflow_en.md  test_reports_de.md  test_reports_en.md
generators/: prompt_selector.py
outputs/: evaluation_output_20250526_000526.json
prompt_quality/: lang_de.py  lang_en.py  prompt_quality_README.md  prompt_quality_layer.md  render_and_validate_template.py  usecase_quality_score.py  validate_prompt_quality_de.py
prompt_quality/cli/: validate_prompt_quality_cli.py  validate_templates_batch.py
prompt_quality/languages/: lang_de.py  lang_en.py
prompt_quality/validators/: usecase_quality_score.py  (+3 more)
scripts/: README.md  eval_chain.py  eval_runner.py  generate_sample_data.py  pdf_generator.py  run_generate_sample_data.ps1  token_cost_summary.py  validate_all_prompts.py  validate_output.py
static/: style.css
templates/: index.html  report.html
tests/: conftest.py
(+41 files in other folders)
