[project]
name = "parts2sales-llm-hub"
version = "0.1.0"
description = "Modular LLM hub for Parts2Sales applications."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "mypy>=1.15.0",
    "typer>=0.16.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.34.2",
    "weasyprint>=65.1",
]

[tool.rye]
dev-dependencies = [
    "black>=25.1.0",
    "pre-commit>=4.2.0"
]

[tool.setuptools]
packages = ["parts2sales_llm_hub"]
package-dir = {"" = "src"}
